--- a/index.html
+++ b/index.html
@@ -2,12 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>赵强简历</title>
+    <title>赵强</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
-    <!--<meta name="contact" content="tel 18610982803 e-mail:chenjichuan521@sina.cn"/>
-
-    <link rel="shortcut icon" href="images/favicon.ico"/>-->
-
     <!--lib css-->
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css"/>
     <link rel="stylesheet" href="css/jquery.fullPage.css"/>
@@ -239,7 +235,7 @@
                         <div class="caption">
                             <h3>山西泰瑞信息技术有限公司</h3>
                             <p>前端工程师</p>
-                            <p>互联网电商行业的网站开发，移动端开发，以及接部分外包项目</p>
+                            <p>互联网电商行业的网站开发<br>以及接部分外包项目</p>
                         </div>
                     </div>
                 </div>
@@ -454,6 +450,7 @@
 <script src="lib/jquery.fullPage.min.js"></script>
 <script src="lib/jquery.easing.1.3.js"></script>
 <script src="lib/jquery.isotope.js"></script>
-<script src="http://apps.bdimg.com/libs/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+<!--<script src="http://apps.bdimg.com/libs/bootstrap/3.3.4/js/bootstrap.min.js"></script>-->
+<script src="js/bootstrap.min.js"></script>
 <script src="js/handler.js"></script>
 <script src="js/resumeEnter.js"></script>
